<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/tvSignTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ac_sign_up"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDialogMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:textColor="@color/design_default_color_error"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/edSignEmail"
        app:layout_constraintStart_toStartOf="@+id/edSignEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvSignTitle" />

    <EditText
        android:id="@+id/edSignEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textPersonName|textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogMessage" />

    <EditText
        android:id="@+id/edSignPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/edSignEmail"
        app:layout_constraintStart_toStartOf="@+id/edSignEmail"
        app:layout_constraintTop_toBottomOf="@+id/edSignEmail" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btGoogleSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Button"
        app:buttonSize="wide"
        app:layout_constraintEnd_toEndOf="@+id/btSignUpIn"
        app:layout_constraintStart_toStartOf="@+id/btSignUpIn"
        app:layout_constraintTop_toBottomOf="@+id/edSignPassword" />

    <Button
        android:id="@+id/btSignUpIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
        android:text="@string/sign_up_action"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edSignEmail"
        app:layout_constraintStart_toStartOf="@+id/edSignEmail"
        app:layout_constraintTop_toBottomOf="@+id/btGoogleSignIn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btForgetP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/edSignEmail"
        app:layout_constraintStart_toStartOf="@+id/edSignEmail"
        app:layout_constraintTop_toBottomOf="@+id/btSignUpIn" />


</androidx.constraintlayout.widget.ConstraintLayout>